[package]
name = "wintest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[source.crates-io]
replace-with = 'tuna'

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Threading", "Win32_Devices_PortableDevices", "Win32_System_Com", "Win32_UI_Shell_PropertiesSystem"] }
log = "0.4.22"
test-case = "3.3.1"
env_logger = "0.11.5"

[dev-dependencies]
tempfile =  "3.2.0"